--- a/src/modules/collection/styles.scss
+++ b/src/modules/collection/styles.scss
@@ -1,16 +1,21 @@
 .collection_content-header {
-  padding: 1rem 2rem 0 27rem;
+  padding: 1rem 2rem 0 29rem;
 }
 
 .collection_content-wrapper {
   display: flex;
   gap: 1rem;
-  padding-left: 2rem;
   margin-right: -1rem;
   height: 100%;
-  left: 230px;
+  left: -2rem;
   position: relative;
   transition: left 0.5s;
+  width: calc(100% + 27rem);
+
+  .collection_filter-wrapper {
+    display: flex;
+    padding-bottom: 2rem;
+  }
 
   .collection_content {
     flex: auto;
