--- a/src/modules/common/styles.scss
+++ b/src/modules/common/styles.scss
@@ -26,3 +26,110 @@
   border-color: awsui.$color-text-interactive-default !important;
   color: awsui.$color-text-button-primary-default !important;
 }
+
+.card-tooltip {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  .card-tooltip_header {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid awsui.$color-border-button-normal-disabled;
+    padding-bottom: 0.5rem;
+
+    .card-tooltip_card-name {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      line-height: 2.2rem;
+      font-size: 1.6rem;
+      transform: translateY(0.3rem);
+      overflow: hidden;
+    }
+
+    .card-tooltip_card-type-tag {
+      border: 2px solid awsui.$color-text-interactive-default;
+      padding: 0 1rem;
+      border-radius: 2rem;
+      font-weight: 700;
+      text-shadow: 0 0 2px black;
+      height: 2.2rem;
+    }
+  }
+
+  .card-tooltip_content {
+    padding: 0.7rem 0;
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: 1fr 1fr;
+    font-size: 1.2rem;
+
+    .card-tooltip_content-short {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
+    .card-tooltip_content-long {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+  }
+
+  .card-tooltip_footer {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+  }
+}
+
+// .list-item_content {
+//   padding: 0.5rem 1rem;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   height: calc(100% - 1rem);
+
+//   & > div {
+//     display: flex;
+//     justify-content: space-between;
+
+//     & > div:nth-child(1) {
+//       flex-grow: 1;
+//       overflow: hidden;
+//     }
+
+//     & > div:nth-child(2) {
+//       flex-grow: 0;
+//       flex-shrink: 0;
+//     }
+
+//     .list-item_card-name {
+//       text-overflow: ellipsis;
+//       white-space: nowrap;
+//       line-height: 2rem;
+//       font-size: 1.6rem;
+//     }
+
+//     .list-item_detail {
+//       font-size: 1.2rem;
+//       line-height: 1.6rem;
+//     }
+//   }
+
+//   .list-item_card-type-tag {
+//     border: 2px solid awsui.$color-text-interactive-default;
+//     padding: 0 1rem;
+//     border-radius: 2rem;
+//     font-weight: 700;
+//     text-shadow: 0 0 2px black;
+//     height: 2.2rem;
+//   }
+
+//   .list-item_bottom-row {
+//     font-size: 1.2rem;
+//     line-height: 1.6rem;
+//   }
+// }
