--- a/src/modules/collection/styles.scss
+++ b/src/modules/collection/styles.scss
@@ -20,5 +20,70 @@
   .collection_content {
     flex: auto;
     padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+.collection-manager {
+  display: flex;
+  justify-content: space-between;
+
+  .collection-manager_lhs {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    .collection-manager_name-field {
+      display: flex;
+      gap: 0.5rem;
+
+      & > span {
+        margin: auto;
+      }
+    }
+    .collection-manager_local-actions {
+      display: flex;
+      gap: 0.5rem;
+    }
+  }
+
+  .collection-manager_rhs {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    & input[type="file"] {
+      display: none;
+    }
+
+    & > div {
+      display: flex;
+      gap: 0.5rem;
+      justify-content: flex-end;
+    }
+
+    .collection-manager_sort-wrapper {
+      width: 25rem;
+
+      & > div:nth-child(2) {
+        width: 10.3rem;
+      }
+      & > div:nth-child(3) {
+        width: 9rem;
+      }
+    }
+  }
+}
+
+.collection-container {
+  height: 100%;
+  flex-grow: 0;
+
+  .grid-wrapper {
+    height: 100%;
+    width: 100%;
+    margin: -1rem;
   }
 }
