--- a/src/modules/common/styles.scss
+++ b/src/modules/common/styles.scss
@@ -158,6 +158,7 @@
         & > div:nth-child(2) {
           transform: scale(0.5);
           transform-origin: 0 0;
+          cursor: pointer;
 
           & button {
             font-size: 2.8rem !important;
