Bugfix: card list drag dependency update

--- a/src/modules/collection/styles.scss
+++ b/src/modules/collection/styles.scss
@@ -40,7 +40,7 @@
       gap: 0.5rem;
 
       & > span {
-        margin: auto;
+        margin: auto 0;
       }
     }
     .collection-manager_local-actions {
