--- a/src/home/styles.scss
+++ b/src/home/styles.scss
@@ -13,6 +13,7 @@ html {
   border: 2px solid awsui.$color-border-button-normal-disabled;
   border-radius: 8px !important;
   background-color: awsui.$color-background-dropdown-item-default !important;
+  box-shadow: 0 0.4rem 2rem 0.1rem #000716;
   font-size: 1.4rem !important;
   line-height: 2rem;
   font-family: awsui.$font-family-base;
