--- a/src/modules/common/styles.scss
+++ b/src/modules/common/styles.scss
@@ -28,10 +28,27 @@
 }
 
 .card-tooltip {
-  width: 250px;
+  width: 420px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  gap: 1rem;
+
+  .card-tooltip_img {
+    height: 210px;
+    width: 150px;
+    flex: none;
+
+    & > img {
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  .card-tooltip_details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(100% - 16rem);
+  }
 
   .card-tooltip_header {
     display: flex;
@@ -99,47 +116,69 @@
   height: 90px;
 
   .card-summary_content {
-    padding: 0.5rem 1rem;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: calc(100% - 1rem);
+    gap: 1rem;
 
-    & > div {
+    .card-summary_img {
+      height: 80px;
+      width: calc(80px * 2.5 / 3.5);
+      flex: none;
+      padding: 0.5rem 0 0.5rem 1rem;
+
+      & > img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+
+    .card-summary_details {
+      padding: 0.5rem 1rem 0.5rem 0;
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
+      height: calc(100% - 1rem);
+      flex: auto;
+      max-width: calc(100% - (80px * 2.5 / 3.5) - 3rem);
 
-      & > div:nth-child(1) {
-        flex-grow: 1;
-        overflow: hidden;
-      }
+      & > div {
+        display: flex;
+        justify-content: space-between;
 
-      & > div:nth-child(2) {
-        flex-grow: 0;
-        flex-shrink: 0;
-      }
+        & > div:nth-child(1) {
+          flex-grow: 1;
+          overflow: hidden;
+        }
 
-      .card-summary_card-name {
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        line-height: 2rem;
-        font-size: 1.6rem;
-        overflow: hidden;
-      }
+        & > div:nth-child(2) {
+          flex-grow: 0;
+          flex-shrink: 0;
+        }
 
-      .card-summary_detail {
-        font-size: 1.2rem;
-        line-height: 1.6rem;
+        .card-summary_card-name {
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          line-height: 2rem;
+          font-size: 1.6rem;
+          overflow: hidden;
+        }
+
+        .card-summary_detail {
+          font-size: 1.2rem;
+          line-height: 1.6rem;
+        }
       }
     }
 
     .card-summary_card-type-tag {
-      border: 2px solid awsui.$color-text-interactive-default;
-      padding: 0 1rem;
+      border: 1.5px solid awsui.$color-text-interactive-default;
+      padding: 0 0.8rem;
       border-radius: 2rem;
       font-weight: 700;
-      text-shadow: 0 0 2px black;
-      height: 2.2rem;
+      text-shadow: 0 0 3px black;
+      height: 1.8rem;
+      line-height: 1.8rem;
+      font-size: 1.2rem;
     }
 
     .card-summary_bottom-row {
@@ -158,7 +197,8 @@
         & > div:nth-child(2) {
           transform: scale(0.5);
           transform-origin: 0 0;
-          cursor: pointer;
+          cursor: pointer !important;
+          width: 3.6rem;
 
           & button {
             font-size: 2.8rem !important;
