--- a/src/modules/collection/styles.scss
+++ b/src/modules/collection/styles.scss
@@ -6,7 +6,7 @@
   display: flex;
   gap: 1rem;
   margin-right: -1rem;
-  height: 100%;
+  height: calc(100vh - 6.8rem);
   left: -2rem;
   position: relative;
   transition: left 0.5s;
